--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 		<meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../src/styles/index.css">
-		<link rel="stylesheet" href="./src/css/components/media.css">
-		<link rel="stylesheet" href="./src/css/components/modal.css">
-		<link rel="stylesheet" href="./src/css/components/reset.css">
+        <link rel="stylesheet" href="/src/styles/index.css">
+		<link rel="stylesheet" href="/src/css/components/media.css">
+		<link rel="stylesheet" href="/src/css/components/modal.css">
+		<link rel="stylesheet" href="/src/css/components/reset.css">
 
 	<div class="wrapper">
 		<div class="sky1"></div>
@@ -164,10 +164,10 @@
 	</div>
 </div>
 </div>
-<script src="./src/js/index.js" defer></script>
-<script src="./src/js/response.js" defer></script>
-<script src="./src/js/validation.js" defer></script>
-<script src="./src/js/modal.js" defer type="module"></script>
-<script src="./src/js/events.js" defer></script>
+<script src="/src/js/index.js" defer></script>
+<script src="/src/js/response.js" defer></script>
+<script src="/src/js/validation.js" defer></script>
+<script src="/src/js/modal.js" defer type="module"></script>
+<script src="/src/js/events.js" defer></script>
 </body>
     </html> 
